# edwinb-ai.github.io

./: 404.html  Manifest.toml  about.md  config.md  contact.md  index.html  index.md  outreach.md  projects.md  pyproject.toml  robots.txt  sitemap.xml  utils.jl
_css/: adjust.css  franklin.css  tufte.css
_layout/: head.html  nav.html
_libs/highlight/: github.min.css
about/: index.html
blog/: first-entry.md  index.html  index.md
css/: adjust.css  franklin.css  tufte.css
menu1/: index.html
menu2/: index.html
menu3/: index.html
outreach/: index.html
projects/: index.html
tag/blog/: index.html
tag/code/: index.html
tag/image/: index.html
tag/syntax/: index.html
tag/website/: index.html
